Cover CLI Main.java at 100% line/branch coverage
- Fix stdin input: '-' was incorrectly treated as a flag; now recognized
  as a valid positional argument for stdin
- Replace System.exit(1) with IllegalArgumentException for testability
- Add 25 CLI tests covering all flags (-h, -v, -d, -W, -H, -s, -b, -n,
  -u, --output-width/height), all output formats (PNG, JPEG, TIFF, PDF,
  PS, EPS), stdin input, stdout output, unknown flags, and error paths

Co-authored-by: Copilot <223556219+Copilot@users.noreply.github.com>